new template add

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,9 +1,9 @@
-#root {
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-}
+} */
 
 .logo {
   height: 6em;
@@ -39,4 +39,17 @@
 
 .read-the-docs {
   color: #888;
+}
+
+
+
+ /* @media print {
+  @page {
+    size: 150mm 150mm;
+  }
+} */
+@keyframes spinner-d3o0rx {
+  100% {
+     transform: rotate(1turn);
+  }
 }
